--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,5 @@
 :root {
-    --background: rgb(224, 234, 247);
+    --background: white;
     --header-background: white;
     --text-color: rgb(7, 5, 68);
     --label-color: rgb(75, 102, 98);
