--- a/styles/form.css
+++ b/styles/form.css
@@ -3,9 +3,9 @@ form:not(.inline) {
     margin: auto;
     max-width: 500px;
     border: 1px solid;
-    background: var(--offset-color);
+    border-radius: 25px;
+    background: rgb(243, 235, 224);
     padding: 20px;
-
     display: grid;
     gap: 20px;
 }
@@ -53,7 +53,7 @@ form textarea {
 form button {
     margin-top: 10px;
     height: 45px;
-    background: var(--action-color);
+    background: rgb(178, 178, 203);
     border: 0;
     font-weight: bold;
     color: white;
