--- a/styles/global.css
+++ b/styles/global.css
@@ -1,30 +1,26 @@
 :root {
     --background: white;
-    --header-background: white;
+    --header-background: rgb(0, 0, 0);
     --text-color: rgb(7, 5, 68);
     --label-color: rgb(75, 102, 98);
     --placeholder-color: rgb(136, 136, 153);
     --offset-color: rgb(217, 236, 217);
     --action-color: rgb(77, 132, 252);
 
-    --primary-font: 'Rubik', Corbel, 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans',
-        'DejaVu Sans', 'Bitstream Vera Sans', 'Liberation Sans', Verdana, 'Verdana Ref', sans-serif;
+    --primary-font: 'Press Start 2P', cursive;
 }
 
 body {
-    height: 100vh;
     font-family: var(--primary-font);
     color: var(--text-color);
     background: var(--background);
-    display: grid;
-    grid-template-rows: auto 1fr;
 }
 
 .page-header {
-    position: sticky;
+    /* position: sticky; */
     top: 0;
     padding: 15px;
-    height: 80px;
+    height: auto;
 
     display: flex;
     align-items: center;
@@ -34,19 +30,10 @@ body {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-.page-header .logo {
-    height: 100%;
-}
-
 .page-header .title {
     font-size: 1.3em;
     font-weight: 800;
     flex-grow: 2;
-}
-
-.page-header nav {
-    display: flex;
-    gap: 10px;
 }
 
 main {
@@ -68,4 +55,33 @@ main {
 
 .hidden {
     display: none;
+}
+
+#pencil-image {
+    width: 40px;
+    transform: scaleX(-1);
+}
+
+#pencil-image-two {
+    width: 40px;
+}
+
+header {
+    text-align: center;
+}
+
+#logo-image {
+    width: 230px;
+    display: grid;
+    /* border-radius: 25px; */
+}
+
+.page-header {
+    display: grid;
+    justify-items: center;
+}
+
+.header-title {
+    text-align: center;
+    padding: 30px;
 }
