--- a/styles/game.css
+++ b/styles/game.css
@@ -1,13 +1,16 @@
-main {
+.game-main {
     display: grid;
-    grid-template-rows: auto 2px auto 1fr;
+    grid-template-rows: repeat(4, auto);
     gap: 10px;
+    max-width: 90rem;
+    margin: auto;
 }
 
 .game-summary {
     display: grid;
     background: floralwhite;
     border: darkolivegreen 10px outset;
+    justify-items: center;
 }
 
 #game-title {
