--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -1,34 +1,33 @@
 .card-container {
-    /* display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    justify-items: center; */
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
-    grid-auto-rows: ;
-
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    justify-content: center;
+    grid-auto-rows: auto;
     gap: 25px;
+    margin-top: 40px;
 }
 
-.card img {
-    width: 200px;
-    margin-top: -50px;
+img {
+    width: 300px;
+    margin: 20px;
+    border-radius: 25%;
+    display: grid;
+    justify-items: center;
 }
 
 .card {
-    background-color: aquamarine;
+    background-color: rgb(240, 240, 240);
     display: grid;
-    justify-items: center;
-    width: 330px;
-    margin: 15px;
-    gap: 50px;
+    justify-content: center;
+    width: auto;
+    max-width: 400px;
 }
 
-button {
-    display: grid;
-    justify-self: center;
+.creator-title {
+    font-size: x-small;
 }
-
 .container {
     font-size: smaller;
+    display: grid;
+    justify-items: center;
 }
