--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -4,11 +4,17 @@
     justify-content: center;
     grid-auto-rows: auto;
     gap: 25px;
-    margin-top: 40px;
+    margin: auto 40px;
+}
+
+.about-title {
+    margin-bottom: 40px;
+    text-align: center;
 }
 
 img {
     width: 300px;
+    height: 300px;
     margin: 20px;
     border-radius: 25%;
     display: grid;
