All centering style related bugs fixed - i hope

--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -1,8 +1,7 @@
 .card-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    justify-content: center;
-    grid-auto-rows: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     gap: 25px;
     margin: auto 40px;
 }
