--- a/styles/create-profile.css
+++ b/styles/create-profile.css
@@ -5,7 +5,7 @@
     max-width: 580px;
     min-height: 550px;
     justify-items: center;
-    margin: auto 100px;
+    margin: auto;
     grid-template-rows: 1fr 1fr 0.6fr 1fr 0.6fr;
     gap: 10px;
 }
