Styling update - i think we done

--- a/styles/game.css
+++ b/styles/game.css
@@ -105,5 +105,5 @@ button {
 .canvas-and-controls {
     height: min-content;
     display: grid;
-    justify-content: center;
+    justify-content: left;
 }
