--- a/styles/game.css
+++ b/styles/game.css
@@ -1,12 +1,13 @@
 main {
     display: grid;
     justify-content: center;
+    width: 100vw;
 }
 .game-main {
     display: grid;
-    grid-template-rows: repeat(4, auto);
+    grid-template-rows: repeat(3, auto);
     gap: 10px;
-    width: 600px;
+    min-width: 400px;
     margin: auto;
 }
 
@@ -32,7 +33,6 @@ main {
 #add-guess-form {
     display: grid;
     grid-template-columns: 1fr 100px;
-    margin-bottom: 15px;
 }
 
 input {
@@ -43,15 +43,47 @@ button {
     height: 50px;
 }
 
-#guess-list li {
-    background: rgb(232, 232, 232);
-    margin-bottom: 15px;
-    padding: 5px;
+.game-section {
+    padding-top: 1rem;
+    height: 45rem;
+    width: 80rem;
+    /* overflow: hidden; */
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: flex-end;
+    column-gap: 1rem;
+    margin-bottom: 4rem;
 }
 
 #add-guess-section {
+    margin: 0;
+    height: 43rem;
     display: grid;
-    grid-template-rows: 1fr 200px;
+    grid-template-rows: 1fr 48px;
+}
+
+#guess-list-container {
+    padding: 0;
+    margin: 0;
+    height: 38rem;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+#guess-list {
+    min-height: 38rem;
+    width: 44rem;
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    background-color: rgb(159, 159, 159);
+}
+
+#guess-list li {
+    background: rgb(232, 232, 232);
+    margin: 0.5rem auto 0.5rem 10px;
+    padding: 5px;
 }
 
 #canvas-options {
@@ -93,13 +125,8 @@ button {
     color: blue;
 }
 
-.game-section {
-    padding-top: 1rem;
-    height: 80rem;
-    width: 80rem;
-    overflow: hidden;
-    display: grid;
-    grid-template-columns: auto auto;
+.guess {
+    width: 38rem !important;
 }
 
 .canvas-and-controls {
