--- a/styles/game.css
+++ b/styles/game.css
@@ -17,6 +17,12 @@ main {
     justify-items: center;
 }
 
+#game-board {
+    display: grid;
+    grid-template-rows: 4rem 4rem;
+    justify-items: center;
+}
+
 #game-title {
     align-self: center;
     /* padding-left: 20px; */
@@ -44,8 +50,8 @@ button {
 }
 
 .game-section {
-    padding-top: 1rem;
-    height: 45rem;
+    /* padding-top: 1rem; */
+    height: 44rem;
     width: 80rem;
     /* overflow: hidden; */
     display: grid;
@@ -88,8 +94,16 @@ button {
 
 #canvas-options {
     width: 556px;
+    height: 8rem;
+    padding: 1rem;
+
     display: grid;
-    justify-self: center;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: 2rem auto;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    column-gap: 4rem;
 }
 
 #game-view {
@@ -103,17 +117,13 @@ button {
     font-size: xx-large;
 }
 
-#game-buttons {
-    display: grid;
-    /* grid-template-columns: 1fr 1fr; */
-    /* gap: 20px; */
-    max-width: 50%;
-    margin: 20px auto 0;
+.game-buttons {
+    grid-row-start: 2;
 }
 
 #random-word {
+    grid-column: 1 / -1;
     text-align: center;
-    padding-top: 25px;
     font-size: larger;
     color: blue;
 }
